Redone the item stacks implementation to not use a quantity field on Item/Equipment